--- a/src/style.css
+++ b/src/style.css
@@ -69,16 +69,18 @@ img {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 80vh;
+  height: 65vh;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  z-index: 2;
 }
 
 .header img {
   width: 15vw;
   height: 18vw;
+  z-index: 5;
 }
 
 .title-wrap {
